# whisper-benchmark

./: README.rst  setup.cfg
whisper_benchmark/: __init__.py  cli.py  constants.py  run.py
