[metadata]
name = whisper-benchmark
version = attr: whisper_benchmark.__version__
author = Anthony Monthe
author-email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/whisper-benchmark
project_urls = 
summary = Handy tool for evaluate whisper model performance
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = MIT

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Benchmark

keywords = benchmark, machine learning, deep learning


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =

test_suite = whisper_benchmark.tests
tests_require =

[options.extras_require]


[options.entry_points]
console_scripts =
    whisper-benchmark = whisper_benchmark.cli:main


[coverage:run]
omit = whisper_benchmark/tests/*
branch = True
source = whisper_benchmark

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
